fix: adjust margin for list items to improve spacing

--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ p {
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
 
 /* footer p {
